--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,39 +4,47 @@
         <input required [(ngModel)]="inputForm.apiKey" type="password" placeholder="API KEY" name="apiKey"/>
         <button type="submit">start</button>
     </form>
-    <div [hidden]="!showAudio" class="audio-container">
+    <div [hidden]="!showAudio" class="song-container">
       <audio crossorigin="use-credentials" preload="auto" #player>
       </audio>
-      <div class="metadata-container">
-        <div class="metadata-text-container" *ngIf="currentSong ? currentSong.metadata : false">
+      <div class="top-half">
+        <div class="metadata-container" *ngIf="currentSong ? currentSong.metadata : false">
+          <div class="metadata-text-container">
             <div class="song-title">{{currentSong.metadata.title}}</div>
             <div class="song-artist">{{currentSong.metadata.artist}}</div>
+          </div>
         </div>
       </div>
-      <div class="seek-bar-container" (click)="seekTo()" #seekbar>
-        <div [hidden]="!showSeekCircle" class="seek-circle" #seekcircle></div>
-        <div [hidden]="showSeekCircle" class="progress-circle" [style.left.%]="currentSong.filled"></div>
-        <div class="seek-bar-filled" [style.width.%]="controlState.highlightedPercent"></div>
-        <div class="seek-bar-remaining"></div>
-      </div>
-      <div class="audio-control-container">
-        <div (click)="toggleShuffle()" class="shuffle-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"/></svg>
+      <div class="bottom-half">
+        <div class="seek-bar-container" (click)="seekTo()" #seekbar>
+          <div [hidden]="!showSeekCircle" class="seek-circle" #seekcircle></div>
+          <div [hidden]="showSeekCircle" class="progress-circle" [style.left.%]="currentSong.filled"></div>
+          <div class="seek-bar-filled" [style.width.%]="controlState.highlightedPercent"></div>
+          <div class="seek-bar-remaining"></div>
         </div>
-        <div (click)="skipBackward()" class="skip-back-button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-        </div>
-        <div (click)="pause()" class="pause-button" *ngIf="currentSong.isPlaying">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-        </div>
-        <div (click)="play()" class="play-button" *ngIf="!currentSong.isPlaying">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-        </div>
-        <div (click)="skipForward()" class="skip-forward-button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-        </div>
-        <div (click)="toggleVolumeDropdown()" class="volume-button">
+        <div class="audio-control-container">
+          <div (click)="toggleShuffle()" class="shuffle-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"/></svg>
+          </div>
+          <div (click)="skipBackward()" class="skip-back-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+          </div>
+          <div (click)="pause()" class="pause-button" *ngIf="currentSong.isPlaying">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+          </div>
+          <div (click)="play()" class="play-button" *ngIf="!currentSong.isPlaying">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+          </div>
+          <div (click)="skipForward()" class="skip-forward-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+          </div>
+          <div (click)="toggleVolumeDropdown()" class="volume-button">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+            <div class="volume-dropdown-container" (mousedown)="volumeMouseDown($event)" (mouseup)="volumeMouseUp($event)" (mouseleave)="volumeMouseUp($event)" (mousemove)="changeVolume($event)" #volumedropdown *ngIf="controlState.volumeDropdownOpen">
+              <div class="volume-dropdown-empty"></div>
+              <div class="volume-dropdown-filled" [style.height.%]="controlState.volumeFilledPercent"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
