--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,15 @@
           <div (click)="skipForward()" class="skip-forward-button">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
           </div>
-          <div (click)="toggleVolumeDropdown()" class="volume-button">
+          <div (click)="toggleVolumeDropdown()" class="volume-button" [class.volume-is-open]="controlState.volumeDropdownOpen">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-            <div class="volume-dropdown-container" (mousedown)="volumeMouseDown($event)" (mouseup)="volumeMouseUp($event)" (mouseleave)="volumeMouseUp($event)" (mousemove)="changeVolume($event)" #volumedropdown *ngIf="controlState.volumeDropdownOpen">
+            <div class       = "volume-dropdown-container" 
+                (mousedown)  = "volumeMouseDown($event)" 
+                (mouseup)    = "volumeMouseUp($event)" 
+                (mouseenter) = "changeVolume($event)"
+                (mousemove)  = "changeVolume($event)" 
+                *ngIf        = "controlState.volumeDropdownOpen" 
+                #volumedropdown>
               <div class="volume-dropdown-empty"></div>
               <div class="volume-dropdown-filled" [style.height.%]="controlState.volumeFilledPercent"></div>
             </div>
